<?xml version="1.0"?>
<package format="2">
    <name>rmcl</name>
    <version>2.4.0</version>
    <description>The rmcl package</description>

    <maintainer email="alexander.mock@naturerobots.com">Alexander Mock</maintainer>
    <maintainer email="lniecksch@uos.de">Lennart Niecksch</maintainer>
    <license>BSD-3-Clause</license>

    <url>https://github.com/uos/rmagine</url>
    <author email="alexander.mock@naturerobots.com">Alexander Mock</author>
    
    <buildtool_depend>cmake</buildtool_depend>
    
    <depend>rmagine</depend>

    <export>
        <build_type>cmake</build_type>
    </export>
    
</package>
